--- a/index.html
+++ b/index.html
@@ -194,8 +194,10 @@
                                     <p>Get the compute resources you need with Standard or Optimized Droplets.</p>
                                 </div>
                             </div>
-                        </div>
-                        <div class="row">
+                            <div class="clearfix visible-sm-block visible-md-block visible-lg-block"></div>
+                            <!-- probabilmente fare due row era preferibile, ma gia' che l'ho imparato -->
+                            <!-- </div>
+                        <div class="row"> -->
                             <div class="col-xs-12 col-sm-6">
                                 <div class="step">
                                     <img src="img/one-click.svg" alt="folder icon" class="icon">
@@ -504,7 +506,6 @@
         </div>
     </footer>
     <!-- END FOOTER -->
-    <!-- FIXED -->
 
 
 </body>
