aggiunta classe .lead a p in section.intro

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <div class="col-sm-6">
                         <div class="banner">
                             <h1>The simplest cloud platform for developers & teams</h1>
-                            <p>Deploy, manage, and scale cloud applications faster and more efficiently on DigitalOcean.
+                            <p class="lead">Deploy, manage, and scale cloud applications faster and more efficiently on DigitalOcean.
                                 We make managing infrastrucutre easy for teams and businesses, whether you're running
                                 one virtual machine or ten thousand.</p>
                         </div>
@@ -506,8 +506,6 @@
         </div>
     </footer>
     <!-- END FOOTER -->
-
-
 </body>
 
 </html>
