rimossi alcuni font-size custom (sostituiti da classi bootstrap), cambiato tag da p in address in prima colonna del footer

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
         <!-- MAIN>customers -->
         <section class="customers tb-padder bg-grey text-center">
-            <h3>Innovative business trust DigitalOcean</h3>
+            <h3 class="small text-uppercase">Innovative business trust DigitalOcean</h3>
             <div class="container">
                 <ul class="list-inline logo-list">
                     <li><img src="img/docker.svg" alt="docker icon" class="img-responsive"></li>
@@ -144,7 +144,7 @@
                     <li><img src="img/splunk.svg" alt="splunk icon" class="img-responsive"></li>
                 </ul>
             </div>
-            <p><a href="" class="chevroned_link">View customer stories</a></p>
+            <p><a href="" class="chevroned_link small">View customer stories</a></p>
         </section>
         <!-- END MAIN>customers -->
 
@@ -432,8 +432,8 @@
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <img src="img/logo-small.svg" alt="">
                     <!-- qua posso usare cite per copyright? o address? -->
-                    <p class="copyright">2018 DigitalOcean, LLC. All rights reserved.</p>
-                    <p class="lighter">Proudly made in NY</p>
+                    <address class="copyright">2018 DigitalOcean, LLC. All rights reserved.<br />
+                        <span class="lighter">Proudly made in NY</span></address>
                     <ul class="list-inline">
                         <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
                         <li><a href=""><i class="fab fa-google-plus-g"></i></a></li>
