migliorati graficamente footer, ultima sezionemain, due sezioni .slide_show, aggiunto <p> mancante in prima sezione .slide_show, validati documenti

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <header>
         <!-- HEADER>Navbar-->
         <nav>
+
             <div class="container">
                 <div class="row">
                     <!-- HEADER>Navbar>logo_col -->
@@ -88,7 +89,8 @@
                     <div class="col-sm-6">
                         <div class="banner">
                             <h1>The simplest cloud platform for developers & teams</h1>
-                            <p class="lead">Deploy, manage, and scale cloud applications faster and more efficiently on DigitalOcean.
+                            <p class="lead">Deploy, manage, and scale cloud applications faster and more efficiently on
+                                DigitalOcean.
                                 We make managing infrastrucutre easy for teams and businesses, whether you're running
                                 one virtual machine or ten thousand.</p>
                         </div>
@@ -248,6 +250,7 @@
                         </a>
                     </div>
                 </div>
+                <p> Create compute servers in 55 seconds or less.</p>
                 <div class="dot-list"><span class="dot dot-active"></span><span class="dot"></span><span class="dot"></span><span class="dot"></span></div>
             </div>
 
@@ -417,7 +420,7 @@
 
         <!-- MAIN>aggressive-marketing -->
         <section class="aggressive-marketing bg-blue tb-padder text-center">
-            <h2>Get started now.</h2>
+            <h2 class="section-header">Get started now.</h2>
             <a href="" class="btn lg-btn">Create your account</a>
         </section>
         <!-- END MAIN>aggressive-marketing -->
@@ -430,15 +433,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-md-4">
-                    <img src="img/logo-small.svg" alt="">
-                    <!-- qua posso usare cite per copyright? o address? -->
+                    <img src="img/logo-small.svg" alt="DigitalOcean logo">
                     <address class="copyright">2018 DigitalOcean, LLC. All rights reserved.<br />
-                        <span class="lighter">Proudly made in NY</span></address>
-                    <ul class="list-inline">
-                        <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
-                        <li><a href=""><i class="fab fa-google-plus-g"></i></a></li>
+                        <span class="lighter">Proudly made in NY</span>
+                    </address>
+                    <ul class="list-inline socials">
                         <li><a href=""><i class="fab fa-twitter"></i></a></li>
-                        <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                        <li><a href=""><i class="fab fa-facebook-square"></i></a></li>
+                        <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                        <li><a href=""><i class="fab fa-youtube"></i></a></li>
+                        <li><a href=""><i class="fab fa-linkedin"></i></a></li>
                     </ul>
 
 
@@ -446,7 +450,7 @@
                 <div class="col-xs-12 col-md-8">
                     <div class="row">
                         <div class="col-xs-12 col-sm-6 col-md-3">
-                            <h5>Company</h5>
+                            <h3>Company</h3>
                             <ul>
                                 <li><a href="">About</a></li>
                                 <li><a href="">Leadership</a></li>
@@ -461,7 +465,7 @@
                             </ul>
                         </div>
                         <div class="col-xs-12 col-sm-6 col-md-3">
-                            <h5>Products</h5>
+                            <h3>Products</h3>
                             <ul>
                                 <li><a href="">Droplets</a></li>
                                 <li><a href="">Spaces</a></li>
@@ -478,7 +482,7 @@
                             </ul>
                         </div>
                         <div class="col-xs-12 col-sm-6 col-md-3">
-                            <h5>Community</h5>
+                            <h3>Community</h3>
                             <ul>
                                 <li><a href="">Tutorials</a></li>
                                 <li><a href="">Meetups</a></li>
@@ -493,7 +497,7 @@
                             </ul>
                         </div>
                         <div class="col-xs-12 col-sm-6 col-md-3">
-                            <h5>Support</h5>
+                            <h3>Support</h3>
                             <ul>
                                 <li><a href="">Contact support</a></li>
                                 <li><a href="">FAQ</a></li>
