aumentato font-weight del body, cambiato colore a .slide-arrow nelle sezioni .slide_show

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <div class="col-sm-6">
                         <div class="banner">
                             <h1>The simplest cloud platform for developers & teams</h1>
-                            <p class="lead">Deploy, manage, and scale cloud applications faster and more efficiently on
+                            <p>Deploy, manage, and scale cloud applications faster and more efficiently on
                                 DigitalOcean.
                                 We make managing infrastrucutre easy for teams and businesses, whether you're running
                                 one virtual machine or ten thousand.</p>
@@ -421,7 +421,7 @@
         <!-- MAIN>aggressive-marketing -->
         <section class="aggressive-marketing bg-blue tb-padder text-center">
             <h2 class="section-header">Get started now.</h2>
-            <a href="" class="btn lg-btn">Create your account</a>
+            <a href="" class="btn btn-lg">Create your account</a>
         </section>
         <!-- END MAIN>aggressive-marketing -->
 
