data min-width a body, eliminate alcune altezze fisse in .pesky-shark, ripristinato layout con due row (rimuovendo div di clearfix) in .deploy

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                             </form>
                             <a href="" class="btn btn-block blue-button">Create your account</a>
                             <div class="button-wrapper">
-                                <a href="" class="btn btn-block white-button"><img src="img/google-icon.png" alt="" class="left-button"> Sign up with google</a>
+                                <a href="" class="btn btn-block white-button"><img src="img/google-icon.png" alt="" class="left-button xs-hidden"> Sign up with google</a>
                             </div>
                             <!-- END MAIN>Intro>log-box_col>login_stuff -->
 
@@ -196,10 +196,10 @@
                                     <p>Get the compute resources you need with Standard or Optimized Droplets.</p>
                                 </div>
                             </div>
-                            <div class="clearfix visible-sm-block visible-md-block visible-lg-block"></div>
+                            <!-- <div class="clearfix visible-sm-block visible-md-block visible-lg-block"></div> -->
                             <!-- probabilmente fare due row era preferibile, ma gia' che l'ho imparato -->
-                            <!-- </div>
-                        <div class="row"> -->
+                        </div>
+                        <div class="row">
                             <div class="col-xs-12 col-sm-6">
                                 <div class="step">
                                     <img src="img/one-click.svg" alt="folder icon" class="icon">
